# autonboard

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  dashboard.py  main.py  pyproject.toml
.git-hooks/: pre-commit.local
data/demo/: runs.json
data/insights/: 20260516_164639.json  20260516_172423.json  20260516_172526.json  20260516_183616.json  20260516_183958.json  20260516_195136.json  20260516_203042.json  20260516_203649.json  20260516_203814.json  20260517_212152.json  20260517_212817.json  20260517_230419.json  20260517_230744.json  20260517_232121.json  20260517_232913.json  20260517_233318.json  20260518_134129.json  20260518_200520.json  20260518_213748.json
data/memory/: archetypes.jsonl  atoms.jsonl
docs/: AGI_HOUSE_DEMO.md  BACKLOG.md  DEMO_SCRIPT.md  SPEC.md
scripts/: compare_prompt_versions.py
src/agent/: actor.py  auth_hold.py  observer.py  orchestrator.py  planner.py  reflector.py
src/app/: main.py
src/core/: browser.py
src/evals/: metrics.py
src/insights/: analyzer.py  logger.py  narrator.py
src/memory/: archetypes.py  atoms.py
src/personas/: generator.py  schema.py
